change get position player to GameLoop.java TODO: refactoring GameLoop.java